--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -3,7 +3,8 @@
 <head>
 {% include components/bugfix-css.html %}
 <meta charset="UTF-8" />
-<title>MailHTML</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title></title>
 {% include components/bugfix-chars.html %}
 </head>
 <body style="padding:0;margin:0;background-color:#f0f0f0;">
