--- a/src/_includes/components/bugfix-css.html
+++ b/src/_includes/components/bugfix-css.html
@@ -1,9 +1,12 @@
 <style type="text/css">
-.ReadMsgBody {width: 100%;}
-.ExternalClass {width: 100%;}
 body {}
-span.yshortcuts { color:#000; background-color:none; border:none;}
+html,body{width:100%!important;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;margin:0;padding:0;font-family:sans-serif;}
+img{text-align:center;color:#000;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;height:auto;max-width:100%}
+.ReadMsgBody{width:100%;}
+.ExternalClass{width:100%;}
+span.yshortcuts{color:#000;background-color:none;border:none;}
 span.yshortcuts:hover,
 span.yshortcuts:active,
-span.yshortcuts:focus {color:#000; background-color:none; border:none;}
+span.yshortcuts:focus{color:#000;background-color:none;border:none;}
+p{margin:0 0 10px;}
 </style>
