Add global var for project URL

--- a/src/_includes/blocks/title-link.html
+++ b/src/_includes/blocks/title-link.html
@@ -3,7 +3,7 @@
     <tr>
         <td width="400" valign="middle"><h1 style="margin:0;">Mail HTML</h1></td>
         <td width="20"></td>
-        <td width="160" align="right" valign="middle"><a href="https://github.com/darklg/MailHTML" style="text-decoration:none"><span style="color:#369;">Fork me on Github</span></a></td>
+        <td width="160" align="right" valign="middle"><a href="{{site.project_url}}" style="text-decoration:none"><span style="color:#369;">Fork me on Github</span></a></td>
     </tr>
 </table>
 <br />
