Basic responsive mail template

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,10 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="fr-FR">
 <head>
-{% include components/bugfix-css.html %}
-<meta charset="UTF-8" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title></title>
-{% include components/bugfix-chars.html %}
+{% include head.html %}
 </head>
 <body style="padding:0;margin:0;background-color:#f0f0f0;">
