Responsive layout - add image layout & hidden block on mobile

--- a/src/_includes/responsive-header.html
+++ b/src/_includes/responsive-header.html
@@ -10,9 +10,18 @@
         width: 300px!important;
     }
 
+    .m-full-img,
     .m-full {
         display: block;
         width: 100%!important;
+    }
+
+    .m-full-img {
+        margin-bottom: 10px;
+    }
+
+    .m-hide {
+        display: none!important;
     }
 }
 </style>
